--- a/src/pages/menu/menu.module.css
+++ b/src/pages/menu/menu.module.css
@@ -8,18 +8,16 @@
   padding-top: 16px;
   background-color: white;
   padding-bottom: 35px;
-  box-shadow: 0 1px 4px #00000014;
-  margin-bottom: 30px;
 }
 
-.sectionTitle {
+.sectionTitle{
   font-size: 22px;
-  line-height: 28px;
-  font-weight: 700;
-  margin-bottom: 18px;
+    line-height: 28px;
+    font-weight: 700;
+    margin-bottom: 18px;
 }
 
-.backBtn {
+.backBtn{
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -44,7 +42,7 @@
   display: flex;
   flex-direction: column;
   margin-left: 25px;
-  margin-right: 250px;
+  margin-right: 300px;
 }
 
 .menuHeading {
@@ -71,13 +69,14 @@
 .mainMenu {
   background-color: #f9fafa;
   width: 100%;
+  padding-bottom: 100px;
 }
 
 .areas {
   flex-direction: row;
   display: flex;
   padding-left: 64px;
-  padding-top: 16px;
+    padding-top: 16px;
 }
 
 .menuSection {
