--- a/src/components/menuCard/menuCard.module.css
+++ b/src/components/menuCard/menuCard.module.css
@@ -48,3 +48,13 @@
 .image {
   width: 100%;
 }
+
+@media only screen and (max-width: 768px) {
+  .itemDiv {
+    width: unset;
+  }
+
+  .card {
+    margin-bottom: 20px;
+  }
+}
