--- a/src/components/menuSection/menusection.module.css
+++ b/src/components/menuSection/menusection.module.css
@@ -15,3 +15,9 @@
   .menuSection{
     margin-bottom: 35px;
   }
+
+  @media only screen and (max-width: 768px) {
+    .section {
+      display: block;
+    }
+  }
