--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -27,3 +27,9 @@
   flex-direction: row;
   float: right;
 }
+
+@media only screen and (max-width: 768px) {
+  .buttonDiv {
+    display: none;
+  }
+}
